--- a/css/queries.css
+++ b/css/queries.css
@@ -187,7 +187,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%;
         height: 100vh;
         opacity: 0;
         visibility: hidden;
@@ -202,7 +201,7 @@
         -moz-transition: all 0.3s ease-in;
         -ms-transition: all 0.3s ease-in;
         -o-transition: all 0.3s ease-in;
-    }
+}
 
     .nav-open .main-nav {
         opacity: 1;
@@ -399,7 +398,7 @@
     }
 
     .app-text-box {
-        width: 90%;
+        max-width: 90%;
     }
 
     .testimonial {
