--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,9 @@
     background-color: #eef1f6;
     position: sticky;
     top: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
+    /* left: 0; */
+    /* right: 0; */
     z-index: 999;
     height: 7rem;
     display: flex;
